--- a/src/ui/components/menu-bar-info/menu-bar-info.scss
+++ b/src/ui/components/menu-bar-info/menu-bar-info.scss
@@ -1,8 +1,10 @@
+@use '../../styles/utils' as utils;
+
 :host {
   /**
    * @prop --gps-avatar-size: the size of the avatar
    **/
-  --gps-avatar-size: 28px;
+  --gps-avatar-size: utils.base-size(3.5);
 
   display: flex;
   flex-direction: row;
@@ -12,7 +14,7 @@
   flex: 1 0 auto;
   position: relative;
   display: block;
-  margin: 0 12px 0 0;
+  margin: 0 utils.base-size(1.5) 0 0;
 
   border-radius: 50%;
   font-size: 0;
@@ -41,10 +43,21 @@
   }
 
   .name {
-    font-size: .8em;
+    font-size: 1.25rem;
   }
 
   .email {
-    font-size: .7em;
+    font-size: 1.1rem;
+  }
+}
+
+.actions {
+  flex: 0 1 auto;
+  margin-left: utils.base-size(1.5);
+
+  slot::slotted(*) {
+    display: block;
+    height: utils.base-size(2);
+    width: utils.base-size(2);
   }
 }
