--- a/src/ui/styles/global.scss
+++ b/src/ui/styles/global.scss
@@ -10,11 +10,17 @@
     --color-background-header: #e8eaed;
     --color-font: #1f1e21;
   }
+
+  --base-size: 8px;
 }
 
 * {
   cursor: default;
   user-select: none;
+}
+
+html {
+  font-size: 10px;
 }
 
 body {
@@ -25,4 +31,5 @@ body {
   background-color: var(--color-background-body);
   color: var(--color-font);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 1.25rem;
 }
