--- a/src/ui/styles/global.scss
+++ b/src/ui/styles/global.scss
@@ -38,4 +38,6 @@ body {
   color: var(--color-font);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 1.25rem;
+
+  overflow: hidden;
 }
