--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,16 @@
 #neutralinoapp {
-    text-align: center;
-    -webkit-user-select: none;
-    user-select: none;
-    cursor: default;
-}
+  text-align: center;
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: default;
 
-#neutralinoapp h1{
+  h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
-}
-
-#neutralinoapp > div {
+  }
+  
+  > div {
     font-size: 16px;
     font-weight: normal;
+  }
 }
